tests/borrowc-test/test_out/loop-drops.txt
error: value is possibly moved more then once
  --> loop-drops/root.ctl:8:5
   |
 8 |       loop {
   |  _____-
 9 | |         drop(a)
   |                ^ here
10 | |     }
   | |_____- info: the loop
   |
   = note: you can disable move semantics with '#[no_moves]' function attribute
   = note: nonlocal value remains moved even after loop jumps back
   = help: 'break' after the move or move the value beck before next iteration

error: move out of already moved value
  --> loop-drops/root.ctl:24:25
   |
24 |         if true => drop(a)
   |                         - info: previous move of value
25 |         else => continue
26 |         break
27 |     }
28 |     drop(a)
   |          ^ here
   |
   = note: you can disable move semantics with '#[no_moves]' function attribute

error: value is possibly moved more then once
  --> loop-drops/root.ctl:33:5
   |
33 |       loop {
   |  _____-
34 | |         if true => drop(a)
   |                           ^ here
35 | |         else => break
36 | |     }
   | |_____- info: the loop
   |
   = note: you can disable move semantics with '#[no_moves]' function attribute
   = note: nonlocal value remains moved even after loop jumps back
   = help: 'break' after the move or move the value beck before next iteration

